// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfrastructureCard api should NOT call handleClick 1`] = `
<Connect(InfrastructureCard)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <InfrastructureCard
    detailLoaded={true}
    dispatch={[Function]}
    handleClick={[Function]}
    infrastructure={
      Object {
        "ipv4": Array [
          "1",
        ],
        "ipv6": Array [
          "6",
        ],
        "nics": Array [
          "test",
        ],
        "type": "test-type",
        "vendor": "test-vendor",
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
  >
    <LoadingCard
      isLoading={false}
      items={
        Array [
          Object {
            "title": "Type",
            "value": "test-type",
          },
          Object {
            "title": "Vendor",
            "value": "test-vendor",
          },
          Object {
            "onClick": [Function],
            "target": "ipv4",
            "title": "IPv4 addresses",
            "value": "1 addresses",
          },
          Object {
            "onClick": [Function],
            "target": "ipv6",
            "title": "IPv6 addresses",
            "value": "1 addresses",
          },
          Object {
            "onClick": [Function],
            "target": "interfaces",
            "title": "Interfaces/NICs",
            "value": "1 NICs",
          },
        ]
      }
      title="Infrastructure"
    >
      <Stack
        className=""
        component="div"
        gutter="md"
      >
        <div
          className="pf-l-stack pf-m-gutter"
        >
          <StackItem
            className=""
            isFilled={false}
          >
            <div
              className="pf-l-stack__item"
            >
              <TextContent>
                <div
                  className="pf-c-content"
                >
                  <Text
                    component="h1"
                  >
                    <h1
                      className=""
                      data-pf-content={true}
                    >
                      Infrastructure
                    </h1>
                  </Text>
                </div>
              </TextContent>
            </div>
          </StackItem>
          <StackItem
            className=""
            isFilled={true}
          >
            <div
              className="pf-l-stack__item pf-m-fill"
            >
              <TextContent>
                <div
                  className="pf-c-content"
                >
                  <TextList
                    component="dl"
                  >
                    <dl
                      className=""
                      data-pf-content={true}
                    >
                      <TextListItem
                        component="dt"
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                        >
                          Type
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          test-type
                        </dd>
                      </TextListItem>
                      <TextListItem
                        component="dt"
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                        >
                          Vendor
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          test-vendor
                        </dd>
                      </TextListItem>
                      <TextListItem
                        component="dt"
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                        >
                          IPv4 addresses
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          <Clickable
                            item={
                              Object {
                                "onClick": [Function],
                                "target": "ipv4",
                                "title": "IPv4 addresses",
                                "value": "1 addresses",
                              }
                            }
                          >
                            <a
                              href="http://localhost:5000//ipv4"
                              onClick={[Function]}
                            >
                              1 addresses
                            </a>
                          </Clickable>
                        </dd>
                      </TextListItem>
                      <TextListItem
                        component="dt"
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                        >
                          IPv6 addresses
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          <Clickable
                            item={
                              Object {
                                "onClick": [Function],
                                "target": "ipv6",
                                "title": "IPv6 addresses",
                                "value": "1 addresses",
                              }
                            }
                          >
                            <a
                              href="http://localhost:5000//ipv6"
                              onClick={[Function]}
                            >
                              1 addresses
                            </a>
                          </Clickable>
                        </dd>
                      </TextListItem>
                      <TextListItem
                        component="dt"
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                        >
                          Interfaces/NICs
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          <Clickable
                            item={
                              Object {
                                "onClick": [Function],
                                "target": "interfaces",
                                "title": "Interfaces/NICs",
                                "value": "1 NICs",
                              }
                            }
                          >
                            <a
                              href="http://localhost:5000//interfaces"
                              onClick={[Function]}
                            >
                              1 NICs
                            </a>
                          </Clickable>
                        </dd>
                      </TextListItem>
                    </dl>
                  </TextList>
                </div>
              </TextContent>
            </div>
          </StackItem>
        </div>
      </Stack>
    </LoadingCard>
  </InfrastructureCard>
</Connect(InfrastructureCard)>
`;

exports[`InfrastructureCard should render correctly - no data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-pf-content="true"
      >
        Infrastructure
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Type
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv4 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv6 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Interfaces/NICs
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`InfrastructureCard should render correctly with data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-pf-content="true"
      >
        Infrastructure
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Type
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-type
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-vendor
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv4 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//ipv4"
          >
            1 addresses
          </a>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv6 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//ipv6"
          >
            1 addresses
          </a>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Interfaces/NICs
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//interfaces"
          >
            1 NICs
          </a>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`InfrastructureCard should render enabled/disabled 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-pf-content="true"
      >
        Infrastructure
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Type
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-type
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-vendor
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv4 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//ipv4"
          >
            1 addresses
          </a>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          IPv6 addresses
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//ipv6"
          >
            1 addresses
          </a>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Interfaces/NICs
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//interfaces"
          >
            1 NICs
          </a>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
